# pessimize

./: CHANGELOG.md  Cargo.toml  README.md  test-everything.sh
.github/: dependabot.yml
.github/actions/lints/: action.yml
.github/workflows/: ci.yml
src/: alloc.rs  arm.rs  boxed.rs  cell.rs  cmp.rs  ffi.rs  fmt.rs  fs.rs  io.rs  iter.rs  lib.rs  marker.rs  mem.rs  net.rs  num.rs  ops.rs  panic.rs  path.rs  pin.rs  primitive.rs  process.rs  ptr.rs  riscv.rs  string.rs  sync.rs  vec.rs  x86.rs
src/arch/: arm_family.rs  mod.rs  riscv_family.rs  x86_family.rs
