[package]
name = "pessimize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
nightly = []

[dependencies]
safe_arch = { version = "0.6", optional = true }

[dev-dependencies]
safe_arch = "0.6"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["aarch64-unknown-linux-gnu",
           "arm-unknown-linux-gnueabi",
           "i586-unknown-linux-gnu",
           "riscv32i-unknown-none-elf",
           "riscv64gc-unknown-linux-gnu",
           "x86_64-unknown-linux-gnu"]
